--- a/Naives_bayes implementation with Sklearn.ipynb
+++ b/Naives_bayes implementation with Sklearn.ipynb
@@ -6,8 +6,7 @@
       "name": "naives_bayes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOc0ELebqZtCkyxHvaMkbPz",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOc0ELebqZtCkyxHvaMkbPz"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Rahul-Tanawade/Machine-learning/blob/main/Naives_bayes%20implementation%20with%20Sklearn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
